# experiment-skeptic

./: MANIFEST.txt  README.md  pyproject.toml  streamlit_app.py
demo/sample_outputs/: readout_01_output.json
docs/: abstention-policy.md  critique-and-fixes.md  critique-rubric.md  demo-script.md  low-power-policy.md  portfolio-presentation-notes.md  rollout-guidance.md
eval/goldens/: readout_cases.jsonl
eval/rubrics/: abstention.md  issue_quality.md
examples/: readout_01.json  readout_02.json  readout_03.json  readout_04.json
schemas/: critique_output.schema.json  readout_input.schema.json
src/experiment_skeptic/: __init__.py  cli.py  eval_runner.py  logic.py  pipeline.py  validator.py
tests/: test_critic.py
